# open_quadtree_mapping

./: .gitignore  CMakeLists.txt  build.sh
data/: pos_and_img_rgbd_dataset_freiburg1_desk.txt
include/cuda_toolkit/: helper_math.h
include/quadmap/: depthmap.h
src/: depthmap.cpp  main.cpp  seed_matrix.cu
